change note color

--- a/src/CapacityAssessment/Questions/Questions.css
+++ b/src/CapacityAssessment/Questions/Questions.css
@@ -71,7 +71,7 @@
     text-indent: -8px;
     padding: 6px 10px 6px 8px;
     background-color: rgb(227,232,238);
-    color:rgb(60,66,87,1);
+    color:rgb(0, 57, 212);;
     font-weight: normal;
     font-family: monospace;
     font-size: revert;
