--- a/src/CapacityAssessment/CapacityAssessment.css
+++ b/src/CapacityAssessment/CapacityAssessment.css
@@ -31,6 +31,12 @@ button {
     border-radius: 24px;
 }
 
+button:disabled,
+button[disabled] {
+    cursor: initial;
+    background-color: #666666;
+}
+
 .button-container {
     display: flex;
     justify-content: space-around;
