--- a/src/Introduction/Introduction.css
+++ b/src/Introduction/Introduction.css
@@ -8,3 +8,10 @@
     width:100%;
     height:50vh;
 }
+
+.alert {
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+    margin-bottom: 15px;
+}
