--- a/src/CapacityAssessment/Results/Results.css
+++ b/src/CapacityAssessment/Results/Results.css
@@ -17,34 +17,30 @@
 
 .div1 {
     grid-area: 1 / 1 / 2 / 2;
-    font-size: 12px;
+    font-size: 0.6vw;
 }
 
 .div2 {
     grid-area: 2 / 1 / 3 / 2;
-    font-size: 12px;
+    font-size: 0.6vw;
 }
 
 .div3 {
     grid-area: 1 / 2 / 2 / 3;
-    font-size: 12px;
+    font-size: 0.6vw;
 }
 
 .div4 {
     grid-area: 2 / 2 / 3 / 3;
-    font-size: 12px;
+    font-size: 0.6vw;
 }
 
 .div5 {
     grid-area: 1 / 3 / 2 / 4;
-    font-size: 12px;
+    font-size: 0.6vw;
 }
 
 .div6 {
     grid-area: 2 / 3 / 3 / 4;
-    font-size: 12px;
-}
-
-.div7 {
-    grid-area: 1 / 4 / 3 / 5;
+    font-size: 0.6vw;
 }
