--- a/src/CapacityAssessment/SAFArchitectureResults/SAFArchitectureResults.css
+++ b/src/CapacityAssessment/SAFArchitectureResults/SAFArchitectureResults.css
@@ -13,6 +13,18 @@
 
 .inner-capacity-name {
     margin-right: 20px;
+    padding-right: 20px;
+    border-right-style: solid;
+    border-right-width: 2px;
+    border-right-color: white;
+    border-right-style: solid;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.inner-capacity-name:last-child {
+    border-right-style: none;
 }
 
 .inner-capacity-name.amber {
