change show more information behaviour

--- a/src/CapacityAssessment/Questions/Questions.css
+++ b/src/CapacityAssessment/Questions/Questions.css
@@ -17,6 +17,10 @@
     margin: 20px;
 }
 
+.question-table{
+    padding-top: 10px;
+}
+
 .path-to-green-container {
     display: flex;
     justify-content: center;
