--- a/src/CapacityAssessment/CapacityAssessment.css
+++ b/src/CapacityAssessment/CapacityAssessment.css
@@ -54,3 +54,8 @@ button[disabled] {
     display: flex;
     justify-content: space-around;
 }
+
+.alert-confirmation {
+    border-style: solid;
+    padding: 30px;
+}
