--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+:root {
+  --color-stripe: rgb(84, 105, 212);
+}
 body {
   margin: 0;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
